2015-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/vicar.c (ReadVICARImage): Fix Vicar reader's dogged
	determination to continue reading when there is nothing left to
	read.  Solves problem with file provided by Jodie Cunningham on
	2015-01-25.

	* magick/magick.c (PanicDestroyMagick): Replace memory allocation
	functions with dummy functions rather than NULL pointers.
	(InitializeMagickSignalHandlers): Register
	MagickPanicSignalHandler() for SIGSEGV.
	(MagickPanicSignalHandler): Produce an informative message for the
	user.
	(MagickSignalHandlerMessage): Include more detailed information
	from the signal handler via a common routine used by default
	signal handlers.

2015-01-25  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): An attempt to address CID 10291.

2015-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (Exit): Changed to return 'void'. Function can
	not return a value if it does not return.

	* magick/error.c (DefaultFatalErrorHandler): Invoke
	PanicDestroyMagick() rather than DestroyMagick().  If we are
	really that short on memory, DestroyMagick() might not work.

	* magick/magick.c (MagickPanicSignalHandler): Only use async-safe
	functions in signal handler.
	(PanicDestroyMagick): New function for emergency release of
	persistent resources just prior to program exit.  Async-safe and
	does not acquire or release any heap memory.

	* magick/export.c: Eliminate two 'clang' warnings.

2015-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (ReadPDBImage): Fix typo.

	* coders/cineon.c (ReadCINEONImage): Enforce that Cineon image
	info channels is valid.  Solves problem with file provided by
	Jodie Cunningham on 2015-01-24

	* coders/fits.c (ReadFITSImage): Enforce valid bits-per-pixel
	values.  Add detailed header logging.  Solves problem with file
	provided by Jodie Cunningham on 2015-01-24
